language/move-lang/tests/move_check/parser/missing_angle_brace_close.move
module M {
    fun foo() {
        let x = t<u64;
    }
}
